base/yarn/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: synesis-yarn
  labels:
    app.kubernetes.io/part-of: synesis
